--- a/sources.bib
+++ b/sources.bib
@@ -1,5 +1,5 @@
 @article{Dutertre2006,
-  title={Integrating simplex with DPLL (T)},
+  title={Integrating simplex with {DPLL}({T})},
   author={Dutertre, Bruno and De Moura, Leonardo},
   journal={Computer Science Laboratory, SRI International, Tech. Rep. SRI-CSL-06-01},
   year={2006}
@@ -35,15 +35,14 @@
   author={Nipkow, Tobias and Paulson, Lawrence C and Wenzel, Markus},
   volume={2283},
   year={2002},
-  publisher={Springer Science \& Business Media}
+  publisher={Springer}
 }
 
-@article{ConcreteSemantics,
-  title={Concrete Semantics},
-  author={Nipkow, Tobias and Klein, Gerwin},
-  journal={A Proof Assistant Approach},
-  year={2014},
-  publisher={Springer}
+@book{ConcreteSemantics,
+  author    = {Tobias Nipkow and Gerwin Klein},
+  title     = {Concrete Semantics - With {I}sabelle/{HOL}},
+  publisher = {Springer},
+  year      = {2014},
 }
 
 @book{Schrijver1998,
