--- a/sources.bib
+++ b/sources.bib
@@ -1,8 +1,13 @@
-@article{Dutertre2006,
-  title={Integrating simplex with {DPLL}({T})},
-  author={Dutertre, Bruno and De Moura, Leonardo},
-  journal={Computer Science Laboratory, SRI International, Tech. Rep. SRI-CSL-06-01},
-  year={2006}
+@inproceedings{Dutertre2006,
+  author    = {Bruno Dutertre and
+               Leonardo de~Moura},
+  title     = {A Fast Linear-Arithmetic Solver for {DPLL(T)}},
+  booktitle = {Proceedings of the 18th International Conference on Computer Aided Verification},
+  series    = {LNCS},
+  volume    = {4144},
+  pages     = {81--94},
+  publisher = {Springer},
+  year      = {2006},
 }
 
 @inproceedings{Thiemann2018,
@@ -12,6 +17,15 @@
   volume={9},
   pages={37--48},
   year={2018}
+}
+
+@inproceedings{BHT2019,
+  title={Verifying an Incremental Theory Solver for Linear Arithmetic in {I}sabelle/{HOL}},
+  author={Ralph Bottesch and Max W.\ Haslbeck and Ren{\'e} Thiemann},
+  booktitle={Proceedings of the 12th International Symposium on Frontiers of Combining Systems},
+  series = {LNCS},
+  year={2019},
+  note={To appear.}
 }
 
 @book{Decision2016,
@@ -25,6 +39,8 @@
   title={Formalization of incremental simplex algorithm by stepwise refinement},
   author={Spasi{\'c}, Mirko and Mari{\'c}, Filip},
   booktitle={International Symposium on Formal Methods},
+  series    = {LNCS},
+  volume    = {7436},
   pages={434--449},
   year={2012},
   organization={Springer}
