updated FroCoS reference (now I know the volume number)

--- a/sources.bib
+++ b/sources.bib
@@ -23,7 +23,8 @@
   title={Verifying an Incremental Theory Solver for Linear Arithmetic in {I}sabelle/{HOL}},
   author={Ralph Bottesch and Max W.\ Haslbeck and Ren{\'e} Thiemann},
   booktitle={Proceedings of the 12th International Symposium on Frontiers of Combining Systems},
-  series = {LNCS},
+  series = {LNAI},
+  volume = {11715},
   year={2019},
   note={To appear.}
 }
