--- a/report.tex
+++ b/report.tex
@@ -164,7 +164,6 @@ Now that SMT and linear arithmetic have been presented, we can move on to the
 basics of their resolution.
 
 \subsection{Incremental Interface for SMT solvers}
-%TODO: give a chapter number for the book
 An efficient procedure to solve SMT problems is DPLL($T$)
 \cite[Section 3.2]{Decision2016},
 which works as a combination of a SAT-solver and a $T$-solver. Here is a quick
@@ -489,10 +488,10 @@ areas. As we can see, it is the sum of a polytope (the red triangle) and a cone
   There exists $q \in Q$ and $\lambda_0, ..., \lambda_{s-1}
   \leqslant 0$ such that: $$x = q + \sum_{i < s} \lambda_i y_i$$ But for every
   $i$, $\lfloor \lambda_i \rfloor y_i$ is an integral vector, so
-  $$x - \sum_{i=0}^{i<n} \lfloor \lambda_i \rfloor y_i=
-      q + \sum_{i=0}^{i<n} (\lambda_i - \lfloor \lambda_i \rfloor) y_i$$
+  $$x - \sum_{i<n} \lfloor \lambda_i \rfloor y_i=
+      q + \sum_{i<n} (\lambda_i - \lfloor \lambda_i \rfloor) y_i$$
   is integral, and as $\sum_{i<n} (\lambda_i - \lfloor \lambda_i \rfloor) y_i$
-  is contained in $B$, so:
+  is contained in $B$:
   $$x - \sum_{i<n} \lfloor \lambda_i \rfloor y_i \in (Q + B)_I$$
   Finally: $x \in (Q + B)_I + C$
 
@@ -506,58 +505,66 @@ A graphical representation of this proof is given in figure
 in red, $(Q + B)_I$ is represented in green. As we can see, $(Q + B)_I + C$ (the
 green and yellow areas) is exactly the integer hull of the polyhedron.
 
-%FIXME: the boundary of (Q + B) (and therefore the area (Q + B)_I) in wrong.
 \begin{figure}[h]
   \label{integer_hull_decomp}
   \centering
 
   \begin{tikzpicture}
-    \coordinate (extr) at (6.5, 6.5);
+    \coordinate (extr) at (7.5, 7.5);
     \draw[style=help lines, thin] (0, 0) grid (extr);
-    \draw[thick, ->] (0, 0) -- (6.5, 0) node[anchor=west] {x};
-    \draw[thick, ->] (0, 0) -- (0, 6.5) node[anchor=south] {y};
-    \foreach \x in {0, 1, ..., 6} {
-      \foreach \y in {0, 1, ..., 6} {
+    \draw[thick, ->] (0, 0) -- (7.5, 0) node[anchor=west] {x};
+    \draw[thick, ->] (0, 0) -- (0, 7.5) node[anchor=south] {y};
+    \foreach \x in {0, 1, ..., 7} {
+      \foreach \y in {0, 1, ..., 7} {
         \node[draw, circle, fill=black, inner sep=0.7pt] at (\x, \y) {};
       }
     }
 
-    \coordinate (A) at (2, 6.5);
-    \coordinate (A') at (2.167, 6.5);
+    \coordinate (A) at (2.333, 7.5);
+    \coordinate (A') at (2.5, 7.5);
     \coordinate (B) at (0.5, 2);
     \coordinate (C) at (1.5, 0.5);
     \coordinate (D) at (3.5, 0.5);
-    \coordinate (E) at (6.5, 2);
-    \coordinate (E') at (6.5, 2.25);
-    %\coordinate (B') at (6.5, 5);
-    %\coordinate (D') at (5.167, 5.5);
+    \coordinate (E) at (7.5, 2.5);
+    \coordinate (E') at (7.5, 2.75);
 
-    \coordinate (I) at (2, 4);
+    % Extremal points of (Q + B)
+    \coordinate (B') at (1.5, 5);
+    \coordinate (B'') at (3.5, 6);
+    \coordinate (D') at (5.5, 1.5);
+    \coordinate (D'') at (6.5, 4.5);
+
+    % Extremal points of (Q + B)_I
+    \coordinate (I) at (2, 5);
     \coordinate (J) at (1, 3);
     \coordinate (K) at (1, 2);
     \coordinate (L) at (2, 1);
     \coordinate (M) at (4, 1);
     \coordinate (N) at (5, 2);
-    \coordinate (O) at (3, 4);
+    \coordinate (O) at (6, 4);
+    \coordinate (P) at (5, 5);
 
+    % Drawing the polytope Q + C
     \draw[thin] (A) -- (B);
     \draw[thin] (B) -- (C);
     \draw[thin] (C) -- (D);
     \draw[thin] (D) -- (E);
 
+    % Drawing lines of the polytope (Q + B)_I + C
     \draw[thick] (A') -- (J);
     \draw[thick] (M) -- (E');
 
-    \draw[red, thick, dashed, ->] (B) -- (1.5, 5);
-    \draw[red, thick, dashed, ->] (D) -- (4.5, 3.5);
-    \draw[red, thick, dashed, ->] (D) -- (5.5, 1.5);
+    \draw[red, thick, dashed, ->] (B) -- (B');
+    \draw[red, thick, dashed, ->] (B') -- (B'');
+    \draw[red, thick, dashed, ->] (D) -- (D');
+    \draw[red, thick, dashed, ->] (D') -- (D'');
     \draw[red, thick, dashed] (B) -- (D);
     \fill[fill=yellow, opacity=0.5]
-      (A') -- (J) -- (I) -- (O) -- (N) -- (M) -- (E') -- (extr) -- cycle;
+      (A') -- (J) -- (I) -- (P) -- (O) -- (N) -- (M) -- (E') -- (extr) -- cycle;
     \draw[very thick, fill=green, fill opacity=0.5]
-      (I) -- (J) -- (K) -- (L) -- (M) -- (N) -- (O) -- cycle;
+      (I) -- (J) -- (K) -- (L) -- (M) -- (N) -- (O) -- (P) -- cycle;
     \draw[red, very thick]
-      (B) -- (C) -- (D) -- (5.5, 1.5) -- (4.5, 3.5) -- (1.5, 5) -- cycle;
+      (B'') -- (B') -- (B) -- (C) -- (D) -- (D') -- (D'') -- cycle;
   \end{tikzpicture}
 
   \caption{Decomposition of the integer hull of the polytope defined by the
